gwt-bean-validators 0.8.11
- updated iban data
- improved phone number utils
- include PhoneNumberValue test
- added more tests