@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+      http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
@@ -6,7 +22,7 @@
 	<groupId>gwt-bean-validators</groupId>
 	<artifactId>gwt-bean-validators</artifactId>
 	<packaging>jar</packaging>
-	<version>0.8.11-SNAPSHOT</version>
+	<version>0.8.11</version>
 	<name>GWT Bean Validators</name>
 
 	<properties>
@@ -17,8 +33,8 @@
 		<junit.version>4.12</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<slf4j.version>1.7.13</slf4j.version>
-		<gwt-commons-lang3.version>3.4-SNAPSHOT</gwt-commons-lang3.version>
-		<gwt-commons-validator.version>1.5.0-SNAPSHOT</gwt-commons-validator.version>
+		<gwt-commons-lang3.version>3.4-gwt27-0</gwt-commons-lang3.version>
+		<gwt-commons-validator.version>1.5.0-gwt27-0</gwt-commons-validator.version>
 		<wagon-ssh.version>2.10</wagon-ssh.version>
 		<maven-resources-plugin.version>2.7</maven-resources-plugin.version>
 		<maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
@@ -199,7 +215,7 @@
 					<failOnError>true</failOnError>
 					<localWorkers>-1</localWorkers>
 					<testTimeOut>300</testTimeOut>
-					<extraJvmArgs>-Xms512m -Xmx1g -XX:MaxPermSize=256m</extraJvmArgs>
+					<extraJvmArgs>-Xms512m -Xmx1g</extraJvmArgs>
 				</configuration>
 			</plugin>
 			<plugin>
